add includes to everything and finalize

--- a/history/foreign/axial.html
+++ b/history/foreign/axial.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Early Iron Age Indian influences on the Middle-East 🏗️</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -201,11 +202,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#pythagoras">1. Pythagoras</a></li>
-<li><a href="#re-the-great-urbanization-of-the-8th-century-bc">2. Re: The Great Urbanization of the 8th Century BC</a></li>
-<li><a href="#re-ajivikas-in-ethiopia">3. Re: Ajivikas in Ethiopia</a></li>
-<li><a href="#re-comparative-mythology">4. Re: Comparative mythology</a></li>
-<li><a href="#re-kamboja-zoroastrianism-and-the-achaemenid-empire">5. Re: Kamboja, Zoroastrianism and the Achaemenid empire</a></li>
+<li><a href="#orgf4808f8">1. Pythagoras</a></li>
+<li><a href="#orgc70a49a">2. Re: The Great Urbanization of the 8th Century BC</a></li>
+<li><a href="#orge41cd79">3. Re: Ajivikas in Ethiopia</a></li>
+<li><a href="#orgc15f81d">4. Re: Comparative mythology</a></li>
+<li><a href="#orgd2273e8">5. Re: Kamboja, Zoroastrianism and the Achaemenid empire</a></li>
 <li><a href="#org36fb5b2">6. Hellenes and Zoroastrians in ancient India</a></li>
 </ul>
 </div>
@@ -213,9 +214,9 @@
 <p>
 This piece is speculative. The patterns and analogies pointed out are real, we can say with confidence that <i>some</i> relationship existed, and the Axial age certainly began earliest in India, but the precise relationships I hypothesize are my own pet theories, and are less certain. Do not take them for fact &#x2013; I state my own level of belief in each claim I make.
 </p>
-<div id="outline-container-pythagoras" class="outline-2">
-<h2 id="pythagoras"><span class="section-number-2">1.</span> Pythagoras</h2>
-<div class="outline-text-2" id="text-pythagoras">
+<div id="outline-container-orgf4808f8" class="outline-2">
+<h2 id="orgf4808f8"><span class="section-number-2">1.</span> Pythagoras</h2>
+<div class="outline-text-2" id="text-1">
 <p>
 When you read of Pythagoras (570 &#x2013; 495 BC) and his school, it is impossible to not see an Indian influence: in the topics they studied, which were closely similar to the sciences of emphasis in Indian study since a few centuries earlier than his time (geometry especially his eponymous theorem itself, musical tuning, medicine), in their philosophy (transmigration/reincarnation &#x2013; specifically as being related to the breath, numerology/Sāṃkhya, perhaps also the classical elements), and in the way of life in their academy (vegetarianism, ascetism, ritual purity, perhaps also psychedelic experiences) <sup><a id="fnr.i" class="footref" href="#fn.i" role="doc-backlink">1</a></sup>.
 </p>
@@ -233,9 +234,9 @@ I wouldn&rsquo;t really postulate that Pythagoras travelled to India himself: th
 </p>
 </div>
 </div>
-<div id="outline-container-re-the-great-urbanization-of-the-8th-century-bc" class="outline-2">
-<h2 id="re-the-great-urbanization-of-the-8th-century-bc"><span class="section-number-2">2.</span> Re: The Great Urbanization of the 8th Century BC</h2>
-<div class="outline-text-2" id="text-re-the-great-urbanization-of-the-8th-century-bc">
+<div id="outline-container-orgc70a49a" class="outline-2">
+<h2 id="orgc70a49a"><span class="section-number-2">2.</span> Re: The Great Urbanization of the 8th Century BC</h2>
+<div class="outline-text-2" id="text-2">
 <p>
 Well, what were these Iron Age Indians doing in the Middle East?
 </p>
@@ -281,9 +282,9 @@ There is some speculation on fringe blogs that the Paṇis, the term used in the
 </p>
 </div>
 </div>
-<div id="outline-container-re-ajivikas-in-ethiopia" class="outline-2">
-<h2 id="re-ajivikas-in-ethiopia"><span class="section-number-2">3.</span> Re: Ajivikas in Ethiopia</h2>
-<div class="outline-text-2" id="text-re-ajivikas-in-ethiopia">
+<div id="outline-container-orge41cd79" class="outline-2">
+<h2 id="orge41cd79"><span class="section-number-2">3.</span> Re: Ajivikas in Ethiopia</h2>
+<div class="outline-text-2" id="text-3">
 <p>
 Some of the Ajivikas in Egypt may have travelled further down the Nile and settled the region then known as Ethiopia (mostly modern Sudan), as later Greek literature famously attests to a race of &ldquo;gymnosophists&rdquo; (naked philosophers) in Ethiopia descended from the Indian gymnosophists (Ajivikas).
 </p>
@@ -317,9 +318,9 @@ The story itself is very magical of course, and the Greeks wrongly thought that 
 </p>
 </div>
 </div>
-<div id="outline-container-re-comparative-mythology" class="outline-2">
-<h2 id="re-comparative-mythology"><span class="section-number-2">4.</span> Re: Comparative mythology</h2>
-<div class="outline-text-2" id="text-re-comparative-mythology">
+<div id="outline-container-orgc15f81d" class="outline-2">
+<h2 id="orgc15f81d"><span class="section-number-2">4.</span> Re: Comparative mythology</h2>
+<div class="outline-text-2" id="text-4">
 <p>
 Some of the most interesting coincidences of comparative mythology are between the Indian Epics and the Greek ones, which emerged before any known contact between the two civilizations but also cannot be attributed to any common Indo-European root: the Mahābhārata is analogous to the Iliad, the Rāmāyaṇa is analogous to the Odyssey, and the Hesoid&rsquo;s Ages are similar to the Yugas.
 </p>
@@ -346,9 +347,9 @@ Some things that are often mentioned in this context &#x2013; but my impression 
 </p>
 </div>
 </div>
-<div id="outline-container-re-kamboja-zoroastrianism-and-the-achaemenid-empire" class="outline-2">
-<h2 id="re-kamboja-zoroastrianism-and-the-achaemenid-empire"><span class="section-number-2">5.</span> Re: Kamboja, Zoroastrianism and the Achaemenid empire</h2>
-<div class="outline-text-2" id="text-re-kamboja-zoroastrianism-and-the-achaemenid-empire">
+<div id="outline-container-orgd2273e8" class="outline-2">
+<h2 id="orgd2273e8"><span class="section-number-2">5.</span> Re: Kamboja, Zoroastrianism and the Achaemenid empire</h2>
+<div class="outline-text-2" id="text-5">
 <p>
 In the 9th century BC, the Iranians started migrating into Iran proper. They were different from the earlier Indo-Aryans (who had migrated into India and shortly after to Mesopotamia where they had formed the elite of the Mittani kingdom): they spoke a slightly different language and pronounced things differently, they took names ending with -<i>aspa</i> (relating to their horse) rather than -<i>ratha</i> (relating to their chariot), and their religion was slightly different: they shared the Vedic adoration for Agni, but cared little for Indra; they elevated the dyad of <a href="https://en.wikipedia.org/wiki/Mitra-Varuna_(Indo-European)">Mitra-Varuna</a>, but also they had priests called Magi who honoured the Sun. They migrated into Iran proper from the East and established the Median Empire ~678 BC.
 </p>
@@ -908,7 +909,7 @@ You also have the Nuristani people, who inhabit the same region &#x2013; they we
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
