--- a/history/foreign/silkrd.html
+++ b/history/foreign/silkrd.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The Sanskritization of the Silk Road 🏗️</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -201,11 +202,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#re-early-indian-corporate-rule-in-bactria-sogdia">1. Re: Early Indian corporate rule in Bactria-Sogdia</a></li>
-<li><a href="#re-indian-states-in-central-asia-and-the-steppes">2. Re: Indian states in Central Asia and the Steppes</a></li>
-<li><a href="#re-china-and-the-medicine-theory-of-everything-for-indianization">3. Re: China and the Medicine Theory of Everything for Indianization</a></li>
-<li><a href="#re-mongols-japan-korea">4. Re: Mongols, Japan, Korea</a></li>
-<li><a href="#tales-of-indian-explorers">5. tales of Indian explorers</a></li>
+<li><a href="#org14fca2f">1. Re: Early Indian corporate rule in Bactria-Sogdia</a></li>
+<li><a href="#org719f533">2. Re: Indian states in Central Asia and the Steppes</a></li>
+<li><a href="#orge215b4c">3. Re: China and the Medicine Theory of Everything for Indianization</a></li>
+<li><a href="#orgfd97279">4. Re: Mongols, Japan, Korea</a></li>
+<li><a href="#org4783e36">5. tales of Indian explorers</a></li>
 </ul>
 </div>
 </div>
@@ -216,9 +217,9 @@ The heavy dominance of Indian culture on the Silk Road &#x2013; both the overlan
 <p>
 I think two basic factors explain the Indian domination of the Silk Road: <i>corporations</i> and <i>medicine</i>.
 </p>
-<div id="outline-container-re-early-indian-corporate-rule-in-bactria-sogdia" class="outline-2">
-<h2 id="re-early-indian-corporate-rule-in-bactria-sogdia"><span class="section-number-2">1.</span> Re: Early Indian corporate rule in Bactria-Sogdia</h2>
-<div class="outline-text-2" id="text-re-early-indian-corporate-rule-in-bactria-sogdia">
+<div id="outline-container-org14fca2f" class="outline-2">
+<h2 id="org14fca2f"><span class="section-number-2">1.</span> Re: Early Indian corporate rule in Bactria-Sogdia</h2>
+<div class="outline-text-2" id="text-1">
 <p>
 One of the most pervasive themes of Indian history &#x2013; and also perhaps the most underrated aspect in the modern study of it, although it was the very topic of RC Majumdar&rsquo;s thesis &#x2013; is the centrality of the <i>corporation</i>. State capacity was one of the three key weaknesses of Indian civilization &#x2013; the other two being our insularity and our over-reliance on &ldquo;Great Men&rdquo; rather than developing robust institutions &#x2013; and the efficiency of our corporations corrected for this.
 </p>
@@ -252,19 +253,21 @@ Subsequently Alexander encounters a certain &ldquo;Sophytes&rdquo; &#x2013; who 
 </p>
 </div>
 </div>
-<div id="outline-container-re-indian-states-in-central-asia-and-the-steppes" class="outline-2">
-<h2 id="re-indian-states-in-central-asia-and-the-steppes"><span class="section-number-2">2.</span> Re: Indian states in Central Asia and the Steppes</h2>
-<div class="outline-text-2" id="text-re-indian-states-in-central-asia-and-the-steppes">
+<div id="outline-container-org719f533" class="outline-2">
+<h2 id="org719f533"><span class="section-number-2">2.</span> Re: Indian states in Central Asia and the Steppes</h2>
 </div>
+
+
+
+<div id="outline-container-orge215b4c" class="outline-2">
+<h2 id="orge215b4c"><span class="section-number-2">3.</span> Re: China and the Medicine Theory of Everything for Indianization</h2>
 </div>
-<div id="outline-container-re-china-and-the-medicine-theory-of-everything-for-indianization" class="outline-2">
-<h2 id="re-china-and-the-medicine-theory-of-everything-for-indianization"><span class="section-number-2">3.</span> Re: China and the Medicine Theory of Everything for Indianization</h2>
-<div class="outline-text-2" id="text-re-china-and-the-medicine-theory-of-everything-for-indianization">
-</div>
-</div>
-<div id="outline-container-re-mongols-japan-korea" class="outline-2">
-<h2 id="re-mongols-japan-korea"><span class="section-number-2">4.</span> Re: Mongols, Japan, Korea</h2>
-<div class="outline-text-2" id="text-re-mongols-japan-korea">
+
+
+
+<div id="outline-container-orgfd97279" class="outline-2">
+<h2 id="orgfd97279"><span class="section-number-2">4.</span> Re: Mongols, Japan, Korea</h2>
+<div class="outline-text-2" id="text-4">
 <p>
 Early Interactions Between South and Southeast Asia: Reflections on Cross-cultural Exchange
 </p>
@@ -314,9 +317,9 @@ Maritime Trade between Thailand and Bengal. Shahnaj Husne
 </p>
 </div>
 </div>
-<div id="outline-container-tales-of-indian-explorers" class="outline-2">
-<h2 id="tales-of-indian-explorers"><span class="section-number-2">5.</span> tales of Indian explorers</h2>
-<div class="outline-text-2" id="text-tales-of-indian-explorers">
+<div id="outline-container-org4783e36" class="outline-2">
+<h2 id="org4783e36"><span class="section-number-2">5.</span> tales of Indian explorers</h2>
+<div class="outline-text-2" id="text-5">
 <p>
 <a href="https://twitter.com/arya_amsha/status/1339862413701627907">https://twitter.com/arya_amsha/status/1339862413701627907</a>
 </p>
@@ -405,7 +408,7 @@ There are elaborate descriptions given of the Vrātyas in Vedic literature &#x20
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
