--- a/history/hinduism/theology.html
+++ b/history/hinduism/theology.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Early Vedic society and theological developments 🏗️</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -201,11 +202,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#early-vedic-outgroups">1. Early Vedic outgroups</a></li>
-<li><a href="#speculation-on-pre-mauryan-archaeological-cultures">2. Speculation on pre-Mauryan archaeological cultures</a></li>
-<li><a href="#theological-developments-c.-500-bc-to-classical">3. Theological developments c. 500 BC to classical</a></li>
-<li><a href="#further-reading">4. Further reading</a></li>
-<li><a href="#extra-sources">5. Extra sources</a></li>
+<li><a href="#org3611b4b">1. Early Vedic outgroups</a></li>
+<li><a href="#org619c1e2">2. Speculation on pre-Mauryan archaeological cultures</a></li>
+<li><a href="#org45c94c1">3. Theological developments c. 500 BC to classical</a></li>
+<li><a href="#orga5e338b">4. Further reading</a></li>
+<li><a href="#org80ceb0f">5. Extra sources</a></li>
 </ul>
 </div>
 </div>
@@ -257,9 +258,9 @@ The history of Indian theology is however a rather vast topic, and this article 
 <li>Bauddha, Jaina and Sangam theology</li>
 <li>Canonical and post-Canonical theology</li>
 </ul>
-<div id="outline-container-early-vedic-outgroups" class="outline-2">
-<h2 id="early-vedic-outgroups"><span class="section-number-2">1.</span> Early Vedic outgroups</h2>
-<div class="outline-text-2" id="text-early-vedic-outgroups">
+<div id="outline-container-org3611b4b" class="outline-2">
+<h2 id="org3611b4b"><span class="section-number-2">1.</span> Early Vedic outgroups</h2>
+<div class="outline-text-2" id="text-1">
 <p>
 Early Vedic literature mentions a number of outgroups &#x2014; noobs often incorrectly map this onto &ldquo;Aryan&rdquo; and &ldquo;Dravidian&rdquo; (categorizations which do not reflect how people in the Vedic era saw themselves), so it is important to more reasonably identify who these groups were.
 </p>
@@ -326,9 +327,9 @@ Sub-nat circles suffer from the Euhemeristic tendency of believing every mythic 
 </p>
 </div>
 </div>
-<div id="outline-container-speculation-on-pre-mauryan-archaeological-cultures" class="outline-2">
-<h2 id="speculation-on-pre-mauryan-archaeological-cultures"><span class="section-number-2">2.</span> Speculation on pre-Mauryan archaeological cultures</h2>
-<div class="outline-text-2" id="text-speculation-on-pre-mauryan-archaeological-cultures">
+<div id="outline-container-org619c1e2" class="outline-2">
+<h2 id="org619c1e2"><span class="section-number-2">2.</span> Speculation on pre-Mauryan archaeological cultures</h2>
+<div class="outline-text-2" id="text-2">
 <p>
 All the aforementioned groups mentioned lived in the same geographic region as the Vedic people, i.e. Udīchya+Brahmāvarta+Madhyadeśa (Punjab+Haryana+UP) &#x2014; except the Vrātyas who in the latter Vedic period settled the Magadha region (see source [3]), and perhaps the Mlecchas who I might have been of Sindh or the Baloch highlands. What, then, were the religions and cultures in the rest of the Loka, pre-Maurya?
 </p>
@@ -440,9 +441,9 @@ I think that in cases where a place is said to be named after a character, it is
 </p>
 </div>
 </div>
-<div id="outline-container-theological-developments-c.-500-bc-to-classical" class="outline-2">
-<h2 id="theological-developments-c.-500-bc-to-classical"><span class="section-number-2">3.</span> Theological developments c. 500 BC to classical</h2>
-<div class="outline-text-2" id="text-theological-developments-c.-500-bc-to-classical">
+<div id="outline-container-org45c94c1" class="outline-2">
+<h2 id="org45c94c1"><span class="section-number-2">3.</span> Theological developments c. 500 BC to classical</h2>
+<div class="outline-text-2" id="text-3">
 <p>
 The culmination of the theology of the previous period is the <a href="https://archive.org/details/bhaddevat01univgoog/page/n14/mode/2up">Br̥haddevatā</a>, c. 500 BC. Subsequently many theological cults developed, some absorbing non-Vedic elements from the Vrātyas, Nāgas etc. some canonizing the songs of bards (the <i>Sūta</i> caste), and some independent developments.
 </p>
@@ -485,9 +486,9 @@ seven continents, origin stories, yugas, manu, saptarsi, kasyapa, heaven vs rein
 </ul>
 </div>
 </div>
-<div id="outline-container-further-reading" class="outline-2">
-<h2 id="further-reading"><span class="section-number-2">4.</span> Further reading</h2>
-<div class="outline-text-2" id="text-further-reading">
+<div id="outline-container-orga5e338b" class="outline-2">
+<h2 id="orga5e338b"><span class="section-number-2">4.</span> Further reading</h2>
+<div class="outline-text-2" id="text-4">
 <p>
 Sources central to this topic, that you should follow as further reading
 </p>
@@ -525,9 +526,9 @@ Sources central to this topic, that you should follow as further reading
 </p>
 </div>
 </div>
-<div id="outline-container-extra-sources" class="outline-2">
-<h2 id="extra-sources"><span class="section-number-2">5.</span> Extra sources</h2>
-<div class="outline-text-2" id="text-extra-sources">
+<div id="outline-container-org80ceb0f" class="outline-2">
+<h2 id="org80ceb0f"><span class="section-number-2">5.</span> Extra sources</h2>
+<div class="outline-text-2" id="text-5">
 <p>
 Sources that aren&rsquo;t important enough to be fully described inline; i.e. basically any source that is relied on but isn&rsquo;t a &ldquo;comprehensive source on this sub-topic that you should read&rdquo;.
 </p>
@@ -648,7 +649,7 @@ Sources that aren&rsquo;t important enough to be fully described inline; i.e. b
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
