--- a/history/myths.html
+++ b/history/myths.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Indian history myths, narratives and overcorrections 🏗️</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -201,17 +202,17 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#hinduism-brahmins-and-narratives">1. Hinduism, Brahmins and narratives</a></li>
-<li><a href="#the-strengths-of-ancient-india">2. The strengths of Ancient India</a></li>
-<li><a href="#foreign-invasions-and-ancient-militaries">3. Foreign invasions and ancient militaries</a></li>
+<li><a href="#orgf7e4ab5">1. Hinduism, Brahmins and narratives</a></li>
+<li><a href="#orge74afa1">2. The strengths of Ancient India</a></li>
+<li><a href="#orgcd05668">3. Foreign invasions and ancient militaries</a></li>
 <li><a href="#org07b9c75">4. Notes on barbarians</a>
 <ul>
-<li><a href="#āryan-invasions">4.1. Āryan invasions</a></li>
-<li><a href="#alexander">4.2. Alexander</a></li>
-<li><a href="#maurya-gupta-interregnum">4.3. Maurya-Gupta Interregnum</a></li>
-<li><a href="#identity-of-kambojas-scythians-pratiharas">4.4. Identity of Kambojas, Scythians, Pratiharas</a></li>
-<li><a href="#crackpot-islamist-narratives">4.5. Crackpot Islamist narratives</a></li>
-<li><a href="#a-comparative-perspective">4.6. A comparative perspective</a></li>
+<li><a href="#orgbeb4c9a">4.1. Āryan invasions</a></li>
+<li><a href="#orgb34577d">4.2. Alexander</a></li>
+<li><a href="#org428029d">4.3. Maurya-Gupta Interregnum</a></li>
+<li><a href="#orge49d63b">4.4. Identity of Kambojas, Scythians, Pratiharas</a></li>
+<li><a href="#org5caca86">4.5. Crackpot Islamist narratives</a></li>
+<li><a href="#org13b0915">4.6. A comparative perspective</a></li>
 </ul>
 </li>
 </ul>
@@ -285,9 +286,9 @@ Dating: Kautilya, Gustav Oppert gunpowder, Ayodhya, Ramayana/MBh
 <p>
 <b>Left-wing myth:</b> Ayodhya didn&rsquo;t exist until the Gupta period. <b>Right-wing overcorrection:</b> Not only was Ayodhya historical, the Ramayana is completely historical, the Rama Sethu is man-made and was built 7000 years ago <b>Left-wing myth:</b> The Ramayana and Mahabharata were all made up during the Gupta period, Yudhishtira is actually based on Ashoka. <b>Right-wing overcorrection:</b> The Mahabharata is from 3000 BC and everything in it is true word-for-word, the Ramayana is from 7000 BC. Bardic literature etc. Exception: Ayurveda. <b>Left-wing myth:</b> The Aryans invaded India and enslaved the native population, creating the caste system. <b>Right-wing overcorrection:</b> The Aryan invasion never happened, Aryans originated in India and migrated outwards. <b>Left-wing myth:</b> Vikramaditya never existed, he was a legendary ruler just based on Chandragupta II. <b>Right-wing overcorrection:</b> Vikramaditya not only existed, he conquered the entire world including India, Arabia, Central Asia and Europe.
 </p>
-<div id="outline-container-hinduism-brahmins-and-narratives" class="outline-2">
-<h2 id="hinduism-brahmins-and-narratives"><span class="section-number-2">1.</span> Hinduism, Brahmins and narratives</h2>
-<div class="outline-text-2" id="text-hinduism-brahmins-and-narratives">
+<div id="outline-container-orgf7e4ab5" class="outline-2">
+<h2 id="orgf7e4ab5"><span class="section-number-2">1.</span> Hinduism, Brahmins and narratives</h2>
+<div class="outline-text-2" id="text-1">
 <p>
 <b>Left-wing myth:</b> Everything is about caste system, etc.
 </p>
@@ -353,9 +354,9 @@ Dating: Kautilya, Gustav Oppert gunpowder, Ayodhya, Ramayana/MBh
 </p>
 </div>
 </div>
-<div id="outline-container-the-strengths-of-ancient-india" class="outline-2">
-<h2 id="the-strengths-of-ancient-india"><span class="section-number-2">2.</span> The strengths of Ancient India</h2>
-<div class="outline-text-2" id="text-the-strengths-of-ancient-india">
+<div id="outline-container-orge74afa1" class="outline-2">
+<h2 id="orge74afa1"><span class="section-number-2">2.</span> The strengths of Ancient India</h2>
+<div class="outline-text-2" id="text-2">
 <p>
 <b>Left-wing myth:</b> All Indic technologies were courtesy of some sort of foreign invasions, Indian civilization was inferior to European, Chinese and even Middle-Eastern civilization.
 </p>
@@ -429,9 +430,9 @@ Link to &ldquo;What did ancient India look like?&rdquo;.
 </p>
 </div>
 </div>
-<div id="outline-container-foreign-invasions-and-ancient-militaries" class="outline-2">
-<h2 id="foreign-invasions-and-ancient-militaries"><span class="section-number-2">3.</span> Foreign invasions and ancient militaries</h2>
-<div class="outline-text-2" id="text-foreign-invasions-and-ancient-militaries">
+<div id="outline-container-orgcd05668" class="outline-2">
+<h2 id="orgcd05668"><span class="section-number-2">3.</span> Foreign invasions and ancient militaries</h2>
+<div class="outline-text-2" id="text-3">
 <p>
 <b>Left-wing myth:</b> Islamic invasions were great for India, they introduced more mechanization in India and increased the GDP.
 </p>
@@ -477,14 +478,15 @@ I don&rsquo;t understand how anyone with any knowledge of ancient military histo
 <h2 id="org07b9c75"><span class="section-number-2">4.</span> Notes on barbarians</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-āryan-invasions" class="outline-3">
-<h3 id="āryan-invasions"><span class="section-number-3">4.1.</span> Āryan invasions</h3>
-<div class="outline-text-3" id="text-āryan-invasions">
+<div id="outline-container-orgbeb4c9a" class="outline-3">
+<h3 id="orgbeb4c9a"><span class="section-number-3">4.1.</span> Āryan invasions</h3>
 </div>
-</div>
-<div id="outline-container-alexander" class="outline-3">
-<h3 id="alexander"><span class="section-number-3">4.2.</span> Alexander</h3>
-<div class="outline-text-3" id="text-alexander">
+
+
+
+<div id="outline-container-orgb34577d" class="outline-3">
+<h3 id="orgb34577d"><span class="section-number-3">4.2.</span> Alexander</h3>
+<div class="outline-text-3" id="text-4-2">
 <p>
 Greco-Roman sources, in chronological order of events &#x2013; tell me if I&rsquo;ve missed anything:
 </p>
@@ -598,27 +600,29 @@ This is probably the only bit of Indian literature even vaguely referencing the 
 </p>
 </div>
 </div>
-<div id="outline-container-maurya-gupta-interregnum" class="outline-3">
-<h3 id="maurya-gupta-interregnum"><span class="section-number-3">4.3.</span> Maurya-Gupta Interregnum</h3>
-<div class="outline-text-3" id="text-maurya-gupta-interregnum">
+<div id="outline-container-org428029d" class="outline-3">
+<h3 id="org428029d"><span class="section-number-3">4.3.</span> Maurya-Gupta Interregnum</h3>
 </div>
-</div>
-<div id="outline-container-identity-of-kambojas-scythians-pratiharas" class="outline-3">
-<h3 id="identity-of-kambojas-scythians-pratiharas"><span class="section-number-3">4.4.</span> Identity of Kambojas, Scythians, Pratiharas</h3>
-<div class="outline-text-3" id="text-identity-of-kambojas-scythians-pratiharas">
+
+
+
+<div id="outline-container-orge49d63b" class="outline-3">
+<h3 id="orge49d63b"><span class="section-number-3">4.4.</span> Identity of Kambojas, Scythians, Pratiharas</h3>
+<div class="outline-text-3" id="text-4-4">
 <p>
 <a href="https://archive.org/details/in.gov.ignca.36138/page/53/mode/2up">https://archive.org/details/in.gov.ignca.36138/page/53/mode/2up</a> Abhiras their history and culture (Bhagwansingh Suryavanshi) <a href="https://en.wikipedia.org/wiki/Ishwarsena">https://en.wikipedia.org/wiki/Ishwarsena</a>
 </p>
 </div>
 </div>
-<div id="outline-container-crackpot-islamist-narratives" class="outline-3">
-<h3 id="crackpot-islamist-narratives"><span class="section-number-3">4.5.</span> Crackpot Islamist narratives</h3>
-<div class="outline-text-3" id="text-crackpot-islamist-narratives">
+<div id="outline-container-org5caca86" class="outline-3">
+<h3 id="org5caca86"><span class="section-number-3">4.5.</span> Crackpot Islamist narratives</h3>
 </div>
-</div>
-<div id="outline-container-a-comparative-perspective" class="outline-3">
-<h3 id="a-comparative-perspective"><span class="section-number-3">4.6.</span> A comparative perspective</h3>
-<div class="outline-text-3" id="text-a-comparative-perspective">
+
+
+
+<div id="outline-container-org13b0915" class="outline-3">
+<h3 id="org13b0915"><span class="section-number-3">4.6.</span> A comparative perspective</h3>
+<div class="outline-text-3" id="text-4-6">
 <p>
 The popular conception of Ancient Indian civilization is as a militarily weak one &#x2013; one which was often subject to foreign invasions, but which never invaded any territory outside its boundaries (with the one exception of the Chola invasion of Srivijaya noted under an asterisk), often attributed to &ldquo;the foolishness of our kings&rdquo; or our insularity.
 </p>
@@ -704,7 +708,7 @@ It&rsquo;s also worth noting that in the case of other civilizations, foreign co
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
