--- a/history/old/income.html
+++ b/history/old/income.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Estimating Mauryan-era incomes from the weight of a mung bean.md</title>
@@ -193,10 +193,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">Estimating Mauryan-era incomes from the weight of a mung bean.md</h1>
+<p>
+<p class="byline">Also published on <a href="https://srajma.substack.com/p/estimating-mauryan-era-incomes-from">Substack</a></p>
+</p>
+
 <p>
 Here&rsquo;s my back-of-the-envelope estimate of incomes for various occupations from the Arthaśāstra. Ideally one would look at the average consumption (+taxes) of a Mauryan household and measure its price in modern terms. This is infeasible, so another approach is to use some real good (mung beans) whose price in paṇas we know as the basis of converting Mauryan-era incomes to modern day:
 </p>
@@ -233,7 +238,7 @@ Well I&rsquo;m not completely sure of my calculations. 2.19 also states that 0.7
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
