--- a/history/sources/primary.html
+++ b/history/sources/primary.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>A catalog of ancient Indian literary sources ❗</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -201,21 +202,21 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#in-extant-indian-literature-of-note">1. <code>/in</code> Extant Indian literature of note</a>
+<li><a href="#org718c7c7">1. <code>/in</code> Extant Indian literature of note</a>
 <ul>
-<li><a href="#veda-vedic-corpus">1.1. <code>/veda</code> Vedic corpus</a></li>
-<li><a href="#pol-classical-socio-political-literature-i.e.-artha-nīti-and-dharmaśāstra">1.2. <code>/pol</code> Classical socio-political literature (i.e. Artha, Nīti, and Dharmaśāstra)</a></li>
-<li><a href="#phil-philosophy-and-religion">1.3. <code>/phil</code> Philosophy and religion</a>
+<li><a href="#org5a4066b">1.1. <code>/veda</code> Vedic corpus</a></li>
+<li><a href="#orgf9c98e3">1.2. <code>/pol</code> Classical socio-political literature (i.e. Artha, Nīti, and Dharmaśāstra)</a></li>
+<li><a href="#org65542f5">1.3. <code>/phil</code> Philosophy and religion</a>
 <ul>
 <li><a href="#org1ddc54e">1.3.1. <code>/vedanga</code> Vedāṅga (linguistics, pre-Hellenic astronomy, theology)</a></li>
 <li><a href="#org6e7f39f">1.3.2. <code>/canon</code> Epistemological canon</a></li>
 <li><a href="#orged2665e">1.3.3. <code>/post</code> Post-Canonical literature</a></li>
 </ul>
 </li>
-<li><a href="#math-mathematics-and-astronomy">1.4. <code>/math</code> Mathematics and astronomy</a></li>
-<li><a href="#med-medicine-and-chemistry">1.5. <code>/med</code> Medicine and chemistry</a></li>
-<li><a href="#art-arts">1.6. <code>/art</code> Arts</a></li>
-<li><a href="#sec-worldly-and-religious-traditions">1.7. <code>/sec</code> Worldly and religious traditions</a>
+<li><a href="#org238fb01">1.4. <code>/math</code> Mathematics and astronomy</a></li>
+<li><a href="#orgdfce93f">1.5. <code>/med</code> Medicine and chemistry</a></li>
+<li><a href="#orga7fe7ba">1.6. <code>/art</code> Arts</a></li>
+<li><a href="#orgd9e0bb0">1.7. <code>/sec</code> Worldly and religious traditions</a>
 <ul>
 <li><a href="#orgf7b8c15">1.7.1. <code>/bauddha</code> Buddhist</a></li>
 <li><a href="#orgc793e88">1.7.2. <code>/jaina</code> Jain</a></li>
@@ -230,8 +231,8 @@
 </li>
 </ul>
 </li>
-<li><a href="#foreign-literature">2. Foreign literature</a></li>
-<li><a href="#desiderata">3. Desiderata</a></li>
+<li><a href="#org24606b1">2. Foreign literature</a></li>
+<li><a href="#org3a730ad">3. Desiderata</a></li>
 </ul>
 </div>
 </div>
@@ -250,13 +251,13 @@ This post is a catalogue of ancient Indian literature (plus relevant foreign lit
 <p>
 Something I&rsquo;d quite like to see is a fully functional and complete portal of digitized Indian manuscripts. See end of post for a list of desiderata for such a portal, if anyone&rsquo;s interested in working on such a thing.
 </p>
-<div id="outline-container-in-extant-indian-literature-of-note" class="outline-2">
-<h2 id="in-extant-indian-literature-of-note"><span class="section-number-2">1.</span> <code>/in</code> Extant Indian literature of note</h2>
-<div class="outline-text-2" id="text-in-extant-indian-literature-of-note">
+<div id="outline-container-org718c7c7" class="outline-2">
+<h2 id="org718c7c7"><span class="section-number-2">1.</span> <code>/in</code> Extant Indian literature of note</h2>
+<div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-veda-vedic-corpus" class="outline-3">
-<h3 id="veda-vedic-corpus"><span class="section-number-3">1.1.</span> <code>/veda</code> Vedic corpus</h3>
-<div class="outline-text-3" id="text-veda-vedic-corpus">
+<div id="outline-container-org5a4066b" class="outline-3">
+<h3 id="org5a4066b"><span class="section-number-3">1.1.</span> <code>/veda</code> Vedic corpus</h3>
+<div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><code>/samhita</code> Saṃhitā texts (1500&#x2014;900 BC), i.e. the basic, earliest layer of the Vedas: full Skt audio from <a href="https://vedicheritage.gov.in/samhitas/">vedicheritage.gov.in</a>. Each Veda has multiple Śākhās (schools) which follow slightly different Saṃhitās, as listed below. Tree of Śākhās from <a href="https://hinduism.stackexchange.com/a/31727">Stack Exchange</a>; a fuller bibiliography of texts and translations is available from Arundhati Basu (2006), <i>Vedic Texts English Translations Of The Samhitas, Brahmanas, Aranyakas, And Upanisads</i> (<a href="https://archive.org/details/vedictextsenglishtranslationsofthesamhitasbrahmanasaranyakasandupanisads_606_z/page/n1/mode/2up">archive.org</a>).
 <ul class="org-ul">
@@ -309,9 +310,9 @@ Something I&rsquo;d quite like to see is a fully functional and complete portal 
 </ul>
 </div>
 </div>
-<div id="outline-container-pol-classical-socio-political-literature-i.e.-artha-nīti-and-dharmaśāstra" class="outline-3">
-<h3 id="pol-classical-socio-political-literature-i.e.-artha-nīti-and-dharmaśāstra"><span class="section-number-3">1.2.</span> <code>/pol</code> Classical socio-political literature (i.e. Artha, Nīti, and Dharmaśāstra)</h3>
-<div class="outline-text-3" id="text-pol-classical-socio-political-literature-i.e.-artha-nīti-and-dharmaśāstra">
+<div id="outline-container-orgf9c98e3" class="outline-3">
+<h3 id="orgf9c98e3"><span class="section-number-3">1.2.</span> <code>/pol</code> Classical socio-political literature (i.e. Artha, Nīti, and Dharmaśāstra)</h3>
+<div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><code>/artha</code> Artha texts
 <ul class="org-ul">
@@ -333,9 +334,9 @@ Something I&rsquo;d quite like to see is a fully functional and complete portal 
 </ul>
 </div>
 </div>
-<div id="outline-container-phil-philosophy-and-religion" class="outline-3">
-<h3 id="phil-philosophy-and-religion"><span class="section-number-3">1.3.</span> <code>/phil</code> Philosophy and religion</h3>
-<div class="outline-text-3" id="text-phil-philosophy-and-religion">
+<div id="outline-container-org65542f5" class="outline-3">
+<h3 id="org65542f5"><span class="section-number-3">1.3.</span> <code>/phil</code> Philosophy and religion</h3>
+<div class="outline-text-3" id="text-1-3">
 </div>
 <div id="outline-container-org1ddc54e" class="outline-4">
 <h4 id="org1ddc54e"><span class="section-number-4">1.3.1.</span> <code>/vedanga</code> Vedāṅga (linguistics, pre-Hellenic astronomy, theology)</h4>
@@ -402,17 +403,17 @@ Philosophical literature of traditions besides the standard Brāhmaṇical one i
 </div>
 </div>
 </div>
-<div id="outline-container-math-mathematics-and-astronomy" class="outline-3">
-<h3 id="math-mathematics-and-astronomy"><span class="section-number-3">1.4.</span> <code>/math</code> Mathematics and astronomy</h3>
-<div class="outline-text-3" id="text-math-mathematics-and-astronomy">
+<div id="outline-container-org238fb01" class="outline-3">
+<h3 id="org238fb01"><span class="section-number-3">1.4.</span> <code>/math</code> Mathematics and astronomy</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 Siribhoovalaya
 </p>
 </div>
 </div>
-<div id="outline-container-med-medicine-and-chemistry" class="outline-3">
-<h3 id="med-medicine-and-chemistry"><span class="section-number-3">1.5.</span> <code>/med</code> Medicine and chemistry</h3>
-<div class="outline-text-3" id="text-med-medicine-and-chemistry">
+<div id="outline-container-orgdfce93f" class="outline-3">
+<h3 id="orgdfce93f"><span class="section-number-3">1.5.</span> <code>/med</code> Medicine and chemistry</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 susruta, caraka, stuff those are based on
 </p>
@@ -430,9 +431,9 @@ hastyayurveda of palakapya
 </p>
 </div>
 </div>
-<div id="outline-container-art-arts" class="outline-3">
-<h3 id="art-arts"><span class="section-number-3">1.6.</span> <code>/art</code> Arts</h3>
-<div class="outline-text-3" id="text-art-arts">
+<div id="outline-container-orga7fe7ba" class="outline-3">
+<h3 id="orga7fe7ba"><span class="section-number-3">1.6.</span> <code>/art</code> Arts</h3>
+<div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><code>/kama//vatsyayana</code> Vātsyāyana&rsquo;s Kāmasūtra (c. 200). Full text from <a href="http://sacred-texts.com/">sacred-texts.com</a> (<a href="https://sacred-texts.com/sex/kama/">Richard Burton</a>)</li>
 <li><code>/silpa//manasara</code> Mānasāra Śilpaśāstra (c. 500). Full text from <a href="http://wisdomlib.org/">wisdomlib.org</a> (<a href="https://www.wisdomlib.org/hinduism/book/manasara-english-translation">PK Acharya</a>)</li>
@@ -441,9 +442,9 @@ hastyayurveda of palakapya
 </ul>
 </div>
 </div>
-<div id="outline-container-sec-worldly-and-religious-traditions" class="outline-3">
-<h3 id="sec-worldly-and-religious-traditions"><span class="section-number-3">1.7.</span> <code>/sec</code> Worldly and religious traditions</h3>
-<div class="outline-text-3" id="text-sec-worldly-and-religious-traditions">
+<div id="outline-container-orgd9e0bb0" class="outline-3">
+<h3 id="orgd9e0bb0"><span class="section-number-3">1.7.</span> <code>/sec</code> Worldly and religious traditions</h3>
+<div class="outline-text-3" id="text-1-7">
 </div>
 <div id="outline-container-orgf7b8c15" class="outline-4">
 <h4 id="orgf7b8c15"><span class="section-number-4">1.7.1.</span> <code>/bauddha</code> Buddhist</h4>
@@ -539,9 +540,9 @@ subhashita, chanakya niti, satakatraya
 </div>
 </div>
 </div>
-<div id="outline-container-foreign-literature" class="outline-2">
-<h2 id="foreign-literature"><span class="section-number-2">2.</span> Foreign literature</h2>
-<div class="outline-text-2" id="text-foreign-literature">
+<div id="outline-container-org24606b1" class="outline-2">
+<h2 id="org24606b1"><span class="section-number-2">2.</span> Foreign literature</h2>
+<div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>Meenakshi &amp; Sandhya Jain (2021), <i>The India they saw</i>. Vols 1-2: 1323 pages. [compilation of basically all foreign literature relating to India]</li>
 <li>Herodotus, etc.</li>
@@ -553,9 +554,9 @@ subhashita, chanakya niti, satakatraya
 <hr />
 </div>
 </div>
-<div id="outline-container-desiderata" class="outline-2">
-<h2 id="desiderata"><span class="section-number-2">3.</span> Desiderata</h2>
-<div class="outline-text-2" id="text-desiderata">
+<div id="outline-container-org3a730ad" class="outline-2">
+<h2 id="org3a730ad"><span class="section-number-2">3.</span> Desiderata</h2>
+<div class="outline-text-2" id="text-3">
 <p>
 Something I&rsquo;d quite like to see is a fully functional and complete portal of digitized Indian manuscripts. Desiderata for a comprehensive portal of Indian and Indian-relevant literature.
 </p>
@@ -588,7 +589,7 @@ Some useful general resources regarding the scope and size of Indian literature.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
