--- a/xeet/announcements/xatra.html
+++ b/xeet/announcements/xatra.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>xatra</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -205,6 +206,9 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://twitter.com/real_mahalingam/status/1766657608788664483">Twitter</a></p>
+</p>
 <div id="outline-container-org4487b26" class="outline-2">
 <h2 id="org4487b26"><span class="section-number-2">1.</span> pip install xatra: a Python package for building historical maps</h2>
 <div class="outline-text-2" id="text-1">
@@ -261,7 +265,7 @@ Besides my followers, might be of interest to: ?? (????), ?? (a) ?? (a) ?? (a) ?
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
