--- a/xeet/history/sanudasa.html
+++ b/xeet/history/sanudasa.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sānudāsa</title>
@@ -193,10 +193,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">Sānudāsa</h1>
+<p>
+<p class="byline">Also published on <a href="https://twitter.com/real_mahalingam/status/1689312152996204544">Twitter</a></p>
+</p>
+
 <p>
 Tales of explorers and merchants often faded into oblivion in Indian literature, due to our historic priorities. One notable exception is the tale of Sānudāsa, a prodigal son who takes to the seas to make up for all the family wealth he&rsquo;s squandered.
 </p>
@@ -243,7 +248,7 @@ Here the tale takes a somewhat mythical twist: the merchants travel first to the
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
