--- a/xeet/politics/2024_election.html
+++ b/xeet/politics/2024_election.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>2024 lok sabha post-election thread</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -206,9 +207,17 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1797956765981851833">Twitter</a></p>
+</p>
 <div id="outline-container-orgb7ad019" class="outline-2">
 <h2 id="orgb7ad019"><span class="section-number-2">1.</span> Thread 1</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1797956765981851833">Twitter</a></p>
+</p>
+
+
 <ol class="org-ol">
 <li>The worst part is this sends a signal to all kingmakers &#x2013; alliance parties, deep state bureaus, large corps, media/film industry, local strongmen &#x2013; that the BJP&rsquo;s rule isn&rsquo;t here to stay. The only way to save is for BJP to IMMEDIATELY make a display of power once it forms govt.</li>
 </ol>
@@ -273,6 +282,11 @@ That means getting RG &amp; Congress leadership on a helicopter, crackdown on al
 <div id="outline-container-org102954f" class="outline-2">
 <h2 id="org102954f"><span class="section-number-2">2.</span> Thread 2</h2>
 <div class="outline-text-2" id="text-2">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1799107853204234719">Twitter</a></p>
+</p>
+
+
 <p>
 My main belief update has been that RW has NOT captured the institutions as we had thought.
 </p>
@@ -351,7 +365,7 @@ useless kings like Ben Shapiro, who only exist to perform for their own audience
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
