--- a/xeet/politics/advice/tangential_persecution.html
+++ b/xeet/politics/advice/tangential_persecution.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Baiting enemies to the third rail</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -207,9 +208,17 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1919071044561776753">Twitter</a></p>
+</p>
 <div id="outline-container-orgc36805d" class="outline-2">
 <h2 id="orgc36805d"><span class="section-number-2">1.</span> Third rails</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1919071044561776753">Twitter</a></p>
+</p>
+
+
 <p>
 We often think of the third rails that limit us, but there are also some third rails that we can use to bait our enemies to touch:
 </p>
@@ -234,6 +243,11 @@ We should make every effort to get libs to be open about their beliefs on these.
 <h2 id="org8b1a6e7"><span class="section-number-2">2.</span> Tangential persecution</h2>
 <div class="outline-text-2" id="text-2">
 <p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1804025706172813715">Twitter</a></p>
+</p>
+
+
+<p>
 One reason it&rsquo;s worth punishing your enemies
 </p>
 
@@ -254,6 +268,10 @@ is that it might be politically infeasible to punish them for things they ARE wr
 <div id="outline-container-orga66008c" class="outline-2">
 <h2 id="orga66008c"><span class="section-number-2">3.</span> &ldquo;Hindu Left&rdquo;</h2>
 <div class="outline-text-2" id="text-3">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1910370529749479705">Twitter</a></p>
+</p>
+
 <p>
 This is also why I absolutely DON&rsquo;T want a &ldquo;Hindu Right and a Hindu Left&rdquo;.
 </p>
@@ -280,7 +298,7 @@ The &ldquo;Hindu Left&rdquo; you seek will simply be standard leftist subversion
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
