--- a/xeet/politics/dmk_cynicism.html
+++ b/xeet/politics/dmk_cynicism.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>DMK and cynicism</title>
@@ -193,10 +193,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">DMK and cynicism</h1>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1846166127090495663">Twitter</a></p>
+</p>
+
 <p>
 DMK practices the sort of cynical self-interest/realism that normies attribute to everyone, e.g.
 </p>
@@ -235,7 +240,7 @@ This is honestly a hard concept to grasp because we&rsquo;re so used to assuming
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
