--- a/xeet/politics/meme-theory/chagnon.html
+++ b/xeet/politics/meme-theory/chagnon.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>chagnon-pill</title>
@@ -193,17 +193,22 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">chagnon-pill</h1>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1867915091515150757">Twitter</a></p>
+</p>
+
 <p>
 BTW this is the theory behind the &ldquo;chagnon-pill&rdquo; &#x2014; it&rsquo;s not that people like people who will kill them, but rather they will like people who are evidently (though left unsaid) on the same side as the people who will kill them. Either because they seek protection in the good cop from the bad cop, or evaluate him relatively to his company the bad cop.
 </p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
