--- a/xeet/politics/meme-theory/maximalism.html
+++ b/xeet/politics/meme-theory/maximalism.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Maximalism</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -206,9 +207,16 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1849793618740908240">Twitter</a></p>
+</p>
 <div id="outline-container-orgc705e63" class="outline-2">
 <h2 id="orgc705e63"><span class="section-number-2">1.</span> Tweet 1</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1849793618740908240">Twitter</a></p>
+</p>
+
 <p>
 There is an enduring cultural trait that Indians prefer &ldquo;completeness&rdquo;/&ldquo;adding everything&rdquo; to minimalism.
 </p>
@@ -230,6 +238,10 @@ India is Emacs, Europe is Vim. Both have their charm.
 <h2 id="org47ae26d"><span class="section-number-2">2.</span> Tweet 2</h2>
 <div class="outline-text-2" id="text-2">
 <p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1913434629601739141">Twitter</a></p>
+</p>
+
+<p>
 A wise man here said: Europe is Vim (minimalist), India is Emacs (maximalist).
 </p>
 
@@ -245,7 +257,7 @@ In architecture, in food, in youtube comments going &ldquo;don&rsquo;t forget X,
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
