--- a/xeet/politics/meme-theory/midwit.html
+++ b/xeet/politics/meme-theory/midwit.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>midwit</title>
@@ -193,17 +193,22 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">midwit</h1>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1867911458635579748">Twitter</a></p>
+</p>
+
 <p>
 If you want to understand the theory behind the midwit meme, here it is. Midwits are people who (are smart enough to) use science/rationality/etc for support but not illumination. Priests who bestow legitimacy on kings, rather than bestow kingship on the legitimate.
 </p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
