--- a/xeet/politics/muslims/dysgenics.html
+++ b/xeet/politics/muslims/dysgenics.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>dysgenics</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -205,9 +206,16 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1926122035538714966">Twitter</a></p>
+</p>
 <div id="outline-container-org64d1c7b" class="outline-2">
 <h2 id="org64d1c7b"><span class="section-number-2">1.</span> mosquitoes</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1926122035538714966">Twitter</a></p>
+</p>
+
 <p>
 This tweet explains why non-Muslim minorities of non-Arab Muslim countries are so elite. Copts, Jews, Zoroastrians, Partition refugees, Kashmiri Pandits.
 </p>
@@ -220,7 +228,7 @@ In every country, the poor and submissive converted while the svperior stood. Is
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
