--- a/xeet/politics/new-arya-man/diet1.html
+++ b/xeet/politics/new-arya-man/diet1.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:15 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Diet thread 1</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -207,6 +208,9 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://twitter.com/real_mahalingam/status/1708481807123948007">Twitter</a></p>
+</p>
 <div id="outline-container-org1a4ace7" class="outline-2">
 <h2 id="org1a4ace7"><span class="section-number-2">1.</span> Thread</h2>
 <div class="outline-text-2" id="text-1">
@@ -250,6 +254,11 @@ This tiring veg non-veg debate will never end, but I will do my best
 <h2 id="org082e087"><span class="section-number-2">2.</span> Indian diet</h2>
 <div class="outline-text-2" id="text-2">
 <p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1744528787977416853">Twitter</a></p>
+</p>
+
+
+<p>
 The main reason I don&rsquo;t like the &ldquo;Indian diet bad&rdquo; takes is that &ldquo;Indian food&rdquo; is a very flexible category. The only meaningful sense in which &ldquo;Aloo Gobi cooked in Sunflower Oil&rdquo; is Indian is its spice palette, which is the only good thing about that dish.
 </p>
 
@@ -274,6 +283,11 @@ Indian spices are good. Legumes are good, and the Indian legume palette is uniqu
 <h2 id="org173c3d5"><span class="section-number-2">3.</span> Basic guidance</h2>
 <div class="outline-text-2" id="text-3">
 <p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1766854758520815948">Twitter</a></p>
+</p>
+
+
+<p>
 It&rsquo;s not that hard. The basic macro guidance for vegetarians should be: Let legumes, rather than grains, be the basis of your diet, eat at least 600 calories worth of dairy (ideally non-fat) or eggs, cook in mustard oil, eat a ton of f&amp;v (starchy vegs don&rsquo;t count), eat 50g nuts.
 </p>
 
@@ -285,7 +299,7 @@ Micro guidance would be: among fruits, eat pomegranates/darkly-colored things am
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:15</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
