--- a/xeet/politics/new-arya-man/diet2.html
+++ b/xeet/politics/new-arya-man/diet2.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:15 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>THE OFFICIAL DIET FOR THE NEW ĀRYA MAN</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -224,6 +225,10 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1874463267977851388">Twitter</a></p>
+</p>
+
 <p>
 Trads &amp; shernis, raitas &amp; xoomers, Brahmanical patriarchs &amp; sanatani Chineses, it is with great pleasure that I announce, in time for your resolutions for the sanatani-christian new year:
 </p>
@@ -675,7 +680,7 @@ These are from a guy called Michael Greger who runs a website called <a href="ht
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:15</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
