--- a/xeet/politics/new-arya-man/real_india.html
+++ b/xeet/politics/new-arya-man/real_india.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:15 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The real India</title>
@@ -193,10 +193,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">The real India</h1>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1850766443580989606">Twitter</a></p>
+</p>
+
 <p>
 I don&rsquo;t want to antagonize or spew venom against Rajputs for this. But I will say this much: urban zoomers have a very distorted view of &ldquo;real India&rdquo;.
 </p>
@@ -243,7 +248,7 @@ The rooted traditions should one day be revived/strengthened. But for that they 
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:15</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
