--- a/xeet/politics/new-arya-man/restraint.html
+++ b/xeet/politics/new-arya-man/restraint.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Indriyajaya, environmentalism, the trad fallacy and adapting Hinduism for modernity</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -207,9 +208,17 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1869220291206873409">Twitter</a></p>
+</p>
 <div id="outline-container-org1e9bb30" class="outline-2">
 <h2 id="org1e9bb30"><span class="section-number-2">1.</span> Indriyajaya, the trad fallacy and adapting Hinduism for modernity</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1869220291206873409">Twitter</a></p>
+</p>
+
+
 <p>
 A common mistake I&rsquo;ve seen from neo-trads is they think the restraints in Hinduism were motivated by &ldquo;minimizing harm to others&rdquo; &#x2014; whereas in reality the motive was always <i>personal</i> discipline.
 </p>
@@ -281,6 +290,11 @@ Of the latter category, gaudy aesthetics is one example, but there is a far more
 <h2 id="orgdc57c5a"><span class="section-number-2">2.</span> Environmentalism</h2>
 <div class="outline-text-2" id="text-2">
 <p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1845386587267289545">Twitter</a></p>
+</p>
+
+
+<p>
 The arguments in this article (&ldquo;Ecological Consciousness&rdquo;):
 </p>
 
@@ -332,6 +346,11 @@ The only reason I know it isn&rsquo;t <i>deliberate</i> liberal subversion is th
 <h2 id="org9789240"><span class="section-number-2">3.</span> Hindu anti-environmentalism</h2>
 <div class="outline-text-2" id="text-3">
 <p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1866444506490438042">Twitter</a></p>
+</p>
+
+
+<p>
 Ok sār then tell me what&rsquo;s your cope for:
 </p>
 <ul class="org-ul">
@@ -345,7 +364,7 @@ Ok sār then tell me what&rsquo;s your cope for:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
