--- a/xeet/politics/sindoor.html
+++ b/xeet/politics/sindoor.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Operation Sindoor concluding thoughts</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -211,6 +212,11 @@
 <div id="outline-container-org4d3ad34" class="outline-2">
 <h2 id="org4d3ad34"><span class="section-number-2">1.</span> Whitepill</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1922487035098431520">Twitter</a></p>
+</p>
+
+
 <p>
 We&rsquo;ve learned that:
 </p>
@@ -241,6 +247,11 @@ Our only regret should be that we have only 543 seats to give to our Priest-King
 <h2 id="org826bef2"><span class="section-number-2">2.</span> Whitepill 2</h2>
 <div class="outline-text-2" id="text-2">
 <p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1922647190779900199">Twitter</a></p>
+</p>
+
+
+<p>
 The real achievement wasn&rsquo;t the beautiful 23 minute śakti-pradarśaṇ, but the 10 years of defense modernization effort by Modi govt that enabled it.
 </p>
 
@@ -256,6 +267,10 @@ My only regret is that we have but 543 seats to give to the Priest-King.
 <div id="outline-container-org625943d" class="outline-2">
 <h2 id="org625943d"><span class="section-number-2">3.</span> Blackpill</h2>
 <div class="outline-text-2" id="text-3">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1921215380229443890">Twitter</a></p>
+</p>
+
 <p>
 Absolutely not a W.
 </p>
@@ -283,7 +298,7 @@ And complacency among people, so likely won&rsquo;t even ramp up defense product
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
