--- a/xeet/politics/world-models/abrahamic.html
+++ b/xeet/politics/world-models/abrahamic.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>On "Abrahamism"</title>
@@ -193,10 +193,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">On &ldquo;Abrahamism&rdquo;</h1>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1869582427372544332">Twitter</a></p>
+</p>
+
 <p>
 &ldquo;Abrahamism&rdquo; is like saying Kapil &amp; Kanwal Sibal follow &ldquo;Sibalism&rdquo;, or Mani-shankar &amp; Swaminathan Aiyer follow &ldquo;Aiyerism&rdquo;.
 </p>
@@ -231,7 +236,7 @@ It&rsquo;s like playing TrapAdventure2 in geopolitics.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
