--- a/xeet/politics/world-models/unfamiliar_realms.html
+++ b/xeet/politics/world-models/unfamiliar_realms.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Unfamiliar Realms</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -205,6 +206,10 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1919065854173409497">Twitter</a></p>
+</p>
+
 <p>
 Yes BJP is successful in &ldquo;familiar&rdquo; realms—legacy media, film, traditional enemies like Naxals/Khalistanists, even Pakistan—than in new or less obvious theatres like civil society, social media, academia.
 </p>
@@ -237,6 +242,11 @@ We&rsquo;re elite human capital
 <h2 id="orge44e8f7"><span class="section-number-2">1.</span> cozy corner</h2>
 <div class="outline-text-2" id="text-1">
 <p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1903473194780037189">Twitter</a></p>
+</p>
+
+
+<p>
 The &ldquo;why are TBs woke?&rdquo; pathologizing is the same as MAGAs asking &ldquo;why is Gillette/Budlight suddenly so woke?&rdquo;
 </p>
 
@@ -248,7 +258,7 @@ The &ldquo;why are TBs woke?&rdquo; pathologizing is the same as MAGAs asking &l
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
