--- a/xeet/timepass/ashwini_vaishnaw.html
+++ b/xeet/timepass/ashwini_vaishnaw.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Ashwini Vaishnaw</title>
@@ -193,10 +193,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">Ashwini Vaishnaw</h1>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1913209470236180644">Twitter</a></p>
+</p>
+
 <p>
 We&rsquo;re going to BVILD so much, you may even get tired of BVILDing. And you&rsquo;ll say please, please, it&rsquo;s too much BVILDing, we can&rsquo;t take it anymore. Mr Ashwini Vaishnaw, it&rsquo;s too much. And I&rsquo;ll say NO IT ISN&rsquo;T, we have to keep BVILDing, we have to BVILD more, we&rsquo;re going to BVILD more, we&rsquo;re going to BVILD so much. We&rsquo;re going to BVILD at every level&#x2013;we&rsquo;re going to BVILD with the economy, we&rsquo;re going to BVILD militarily, we&rsquo;re going to BVILD with ATMs in the trains. You&rsquo;re going to be so proud of your trains when you get in. You&rsquo;re going to be so proud of your Railroad Minister.
 </p>
@@ -207,7 +212,7 @@ We&rsquo;re going to BVILD so much, you may even get tired of BVILDing. And you&
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
