--- a/history/foreign/accounts.html
+++ b/history/foreign/accounts.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Tropes about Indian culture 🏜️</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -201,7 +202,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#re-medieval-revivals-in-the-west">1. Re: Medieval Revivals in the West</a></li>
+<li><a href="#org7206dcd">1. Re: Medieval Revivals in the West</a></li>
 </ul>
 </div>
 </div>
@@ -230,9 +231,9 @@ Some Hindu king had perished at the hand of an enemy of his who had marched agai
 <p>
 <img src="/img/foreign/debate.png" alt="debate.png" />
 </p>
-<div id="outline-container-re-medieval-revivals-in-the-west" class="outline-2">
-<h2 id="re-medieval-revivals-in-the-west"><span class="section-number-2">1.</span> Re: Medieval Revivals in the West</h2>
-<div class="outline-text-2" id="text-re-medieval-revivals-in-the-west">
+<div id="outline-container-org7206dcd" class="outline-2">
+<h2 id="org7206dcd"><span class="section-number-2">1.</span> Re: Medieval Revivals in the West</h2>
+<div class="outline-text-2" id="text-1">
 <p>
 Iran
 </p>
@@ -281,7 +282,7 @@ Kshatriyas becoming Brahmins Brahmanda Purana 3.66:86a-90
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
