--- a/history/hinduism/philosophy.html
+++ b/history/hinduism/philosophy.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The early development of Indian philosophy ✅</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -211,6 +212,9 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://srajma.substack.com/p/high-quality-indian-history-sources">Substack</a></p>
+</p>
 <p>
 One globally attested phenomenon in history is the stark change in the nature of human thought between the Bronze and Iron Ages. While there was some limited &ldquo;academic&rdquo; literature in Bronze Age Mesopotamia and Egypt (arithmetic and geometry, astronomy, medicine), the pursuit of knowledge as an end in itself, the scientific temparament (i.e. moving away from &ldquo;magical&rdquo; explanations), and introspection upon this knowledge did not exist until the so-called <a href="https://en.wikipedia.org/wiki/Axial_Age">Axial Age</a> starting c. 800 BC.
 </p>
@@ -465,7 +469,7 @@ Having something to obsess about (religion) and a source of competition (debate)
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
