--- a/history/old/vikramaditya.html
+++ b/history/old/vikramaditya.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vikramaditya; reconstructing the interregnum of 57 BC &#x2013; 78 AD</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -210,6 +211,10 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://srajma.substack.com/p/note-on-vikramaditya">Substack</a></p>
+</p>
+
 <blockquote>
 <p>
 <b>Myth:</b> Vikramaditya never existed, he&rsquo;s just a legendary ruler based on Chandragupta II; there is no epigraphy or coinage issued by him, and he is not mentioned in the dynastic histories (<i>vamsanucharita</i>) of the Puranas.
@@ -1314,7 +1319,7 @@ Vincent A Smith (MRAS, Indian Civil Service), Article 29 &ldquo;The conquests of
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
