--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:15 -->
+<!-- 2025-05-26 Mon 04:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</title>
@@ -193,7 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel="stylesheet" href="styles.css"">
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -202,6 +202,7 @@
 <h2 id="org034894b"><span class="section-number-2">1.</span> Sitemap</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
+<li><a href="header.html">header</a></li>
 <li><a href="index.html">NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar)</a></li>
 <li>history
 <ul class="org-ul">
@@ -402,7 +403,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:15</p>
+<p class="date">Created: 2025-05-26 Mon 04:06</p>
 </div>
 </body>
 </html>
