--- a/sitemap.html
+++ b/sitemap.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:15 -->
+<!-- 2025-05-26 Mon 04:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sitemap of srajma.github.io</title>
@@ -193,11 +193,13 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" type="text/css" href="/styles.css" />
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">Sitemap of srajma.github.io</h1>
 <ul class="org-ul">
+<li><a href="header.html">header</a></li>
 <li><a href="index.html">NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar)</a></li>
 <li>history
 <ul class="org-ul">
@@ -355,7 +357,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:15</p>
+<p class="date">Created: 2025-05-26 Mon 04:06</p>
 </div>
 </body>
 </html>
