--- a/xeet/history/suvarnabhumi.html
+++ b/xeet/history/suvarnabhumi.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Suvarṇabhūmī</title>
@@ -193,10 +193,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">Suvarṇabhūmī</h1>
+<p>
+<p class="byline">Also published on <a href="https://twitter.com/real_mahalingam/status/1691474905315889152">Twitter</a></p>
+</p>
+
 <p>
 Earliest recorded Indian rulers in Southeast Asia: - Kaundinya, Cambodia, 1st cen - Śrī Māra, S. Vietnam, 1st/2nd cen - Deva-varman, Java, 132 AD - Langkasuka, Malaya, ~100 AD For SEA to be so fully Indianized in the 2nd cen, trade and influence must have began much earlier. <img src="/img/suvarnabhumi/F3lS2LtWkAEmuV9.png" alt="F3lS2LtWkAEmuV9.png" />
 </p>
@@ -325,7 +330,7 @@ Summary map, a bit messy:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
