--- a/xeet/politics/agency/bpillers_vs_leftists.html
+++ b/xeet/politics/agency/bpillers_vs_leftists.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Bhōsaḍpillers vs leftists</title>
@@ -193,10 +193,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">Bhōsaḍpillers vs leftists</h1>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1853670328343666822">Twitter</a></p>
+</p>
+
 <p>
 <b>Are you a bhōsaḍpiller looking to be less useless in life? Here are some tips!</b>
 </p>
@@ -231,7 +236,7 @@ There is no feeling of danger that they evoke in people. Even more importantly t
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
