--- a/xeet/politics/agency/useful.html
+++ b/xeet/politics/agency/useful.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>How you can be more useful to the Party: a guide</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -245,7 +246,7 @@ another option: become very successful and do politics as a side-quest. E.g. Elo
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
