--- a/xeet/politics/kayfabe.html
+++ b/xeet/politics/kayfabe.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The world of words and the world of things</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -206,9 +207,17 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1859984433342001651">Twitter</a></p>
+</p>
 <div id="outline-container-org0a64424" class="outline-2">
 <h2 id="org0a64424"><span class="section-number-2">1.</span> Tweet 1</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1859984433342001651">Twitter</a></p>
+</p>
+
+
 <p>
 hate to dunk on an account I like, but it must be said:
 </p>
@@ -262,6 +271,11 @@ Rather to set incentives. For an Indian corporation to succeed, it must be loyal
 <h2 id="org6737820"><span class="section-number-2">2.</span> Tweet 2</h2>
 <div class="outline-text-2" id="text-2">
 <p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1856935089860477079">Twitter</a></p>
+</p>
+
+
+<p>
 Many Indians think the point of politics is saying things.
 Choosing the right ideology
 Having the exact pure beliefs
@@ -277,7 +291,7 @@ In reality it&rsquo;s actually getting things done which takes the most effort, 
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
