--- a/xeet/politics/meme-theory/big_braining.html
+++ b/xeet/politics/meme-theory/big_braining.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Big Braining</title>
@@ -193,6 +193,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
@@ -207,9 +208,17 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1910370529749479705">Twitter</a></p>
+</p>
 <div id="outline-container-orgee5e10f" class="outline-2">
 <h2 id="orgee5e10f"><span class="section-number-2">1.</span> Begging people to stop-big-braining</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1910370529749479705">Twitter</a></p>
+</p>
+
+
 <p>
 Begging people to stop big-braining. You are not Kautilya. Strategy, morality, precedent all these are too complicated for your pea-brains.
 </p>
@@ -222,6 +231,10 @@ Just sappott BJP, sappott more power for your frens, sappott anything that hurts
 <div id="outline-container-orge2b34b7" class="outline-2">
 <h2 id="orge2b34b7"><span class="section-number-2">2.</span> It&rsquo;s never big-braining</h2>
 <div class="outline-text-2" id="text-2">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1908359689978744983">Twitter</a></p>
+</p>
+
 <p>
 It&rsquo;s not big-braining. It&rsquo;s never big-braining.
 </p>
@@ -238,6 +251,11 @@ Please try to understand, big-brains don&rsquo;t go work for government. If ther
 <div id="outline-container-orgb58576d" class="outline-2">
 <h2 id="orgb58576d"><span class="section-number-2">3.</span> What&rsquo;s good for everyone is good for us</h2>
 <div class="outline-text-2" id="text-3">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1779730054202724695">Twitter</a></p>
+</p>
+
+
 <p>
 In a globalized world, the normie attitude of &ldquo;what&rsquo;s good for everyone is good for us&rdquo; is basically correct.
 </p>
@@ -262,7 +280,7 @@ Unless you&rsquo;re Kautilya incarnate, you&rsquo;re not smart enough to big-bra
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
