--- a/xeet/politics/muslims/angry_birds.html
+++ b/xeet/politics/muslims/angry_birds.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>angry birds</title>
@@ -193,10 +193,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">angry birds</h1>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahagarbha/status/1871124592028471448">Twitter</a></p>
+</p>
+
 <p>
 My theory is that Islam&rsquo;s &ldquo;misogyny&rdquo; is a consequence of the sexual dimorphism in their people being reversed in many crucial ways (like in birds).
 </p>
@@ -211,7 +216,7 @@ Muslims are basically angry birds.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
