--- a/xeet/politics/new-arya-man/media_code.html
+++ b/xeet/politics/new-arya-man/media_code.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Media Code</title>
@@ -193,10 +193,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">Media Code</h1>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1712203675123216387">Twitter</a></p>
+</p>
+
 <p>
 Indian high culture sees alcohol as a taboo, but is being replaced by Western high culture which does not.
 </p>
@@ -207,7 +212,7 @@ Reinstating the cultural taboo (rather than a ban) provides an opportunity to br
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
