--- a/xeet/politics/new-arya-man/republic.html
+++ b/xeet/politics/new-arya-man/republic.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>battle hymn of the hindu republic</title>
@@ -193,10 +193,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">battle hymn of the hindu republic</h1>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1878481882079199404">Twitter</a></p>
+</p>
+
 <p>
 Nothing makes me more patriotic for The Republic than seeing low-signal shitslops cry about how their hometown is no longer the quiet hobbit shithole without running water it used to be.
 </p>
@@ -223,7 +228,7 @@ Get on that direct train, or be crushed underneath it. COPE AND SEETHE.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
