--- a/xeet/politics/positive-vision/hsr.html
+++ b/xeet/politics/positive-vision/hsr.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>High-speed rail</title>
@@ -193,10 +193,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">High-speed rail</h1>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1798558608894087590">Twitter</a></p>
+</p>
+
 <p>
 Thick lines here are bare minimum that must be built.
 </p>
@@ -235,7 +240,7 @@ And here&rsquo;s an interactive version, made with xatra: <a href="https://srajm
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
