--- a/xeet/politics/understanding-libs/liberal_ideology.html
+++ b/xeet/politics/understanding-libs/liberal_ideology.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Modern liberalism as the ideology of dehātization</title>
@@ -193,10 +193,15 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">Modern liberalism as the ideology of dehātization</h1>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1867148829180485756">Twitter</a></p>
+</p>
+
 <p>
 Modern liberalism is the ideology of dehātization (in contrast to Sanskritization), the belief that in every matter, the less productive, less civilized, less human elements should triumph over the reverse.
 </p>
@@ -255,7 +260,7 @@ Instead, the only way one curries the favour of the left, get a share of its pow
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
