--- a/xeet/politics/world-models/old_world_elites.html
+++ b/xeet/politics/world-models/old_world_elites.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 01:14 -->
+<!-- 2025-05-26 Mon 04:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Old World Elites</title>
@@ -193,11 +193,13 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
+<link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">Old World Elites</h1>
 <p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1925942959729508661">Twitter</a></p>
 Ah yes, agree completely then.
 </p>
 
@@ -211,7 +213,7 @@ Their stance is also largely a function of how many seats BJP has. One of the ma
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 01:14</p>
+<p class="date">Created: 2025-05-26 Mon 04:05</p>
 </div>
 </body>
 </html>
